first touches in making the hero section

--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,7 @@ body {
 
 .home-section {
   width: 100%;
+  min-height: calc(100vh + 4px);
 }
 .home-section .hero-stripe-container .hero-text-container {
   position: absolute;
